--- a/index.html
+++ b/index.html
@@ -1,43 +1,51 @@
 <html>
-    <title>site ruim da porra</title>
-    <head> 
+    <title>Calculadora do Pera</title>
+    <head>
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
-    <body>
-        <button id="botao" onclick="mudartexto()">Palmeiras</button>
-        <H1>Calculadora JAVA</H1>
-        <p>Turma verde</p>
-    </header> 
-    <selection id="calculadora"
-    <header class="top"
-    <div class="top">
-    </header> 
-    <ul class="key"
-    <li>7</li>
-    <li>8</li>
-    <li>9</li>
-    <li class="operador">/</li>
-    <li>4</li>
-    <li>5</li>
-    <li>6</li>
-    <li class="operador">*</li>
-    <li>1</li>
-    <li>1</li>
-    <li>2</li>
-    <li>3</li>
-    <li class="operador">-</li>
+    <body> 
+       
 
-    <li>0</li>
-    <li>.</li>
-    <li class="operador">+</li>
-    <li>c</li>
-    <li class="operador">=</li>
+    <header>
+        <h1>Calculadora Javascript</h1>
+        <p>Turma Verde</p>
+    </header>
+    <section id="calculadora">
+        <header class="top">
+            <div class="input-valor"></div>
+        </header>
+        <ul class="key">
+            <li>7</li>
+            <li>8</li>
+            <li>9</li>
+            <li class="operador">/</li>
+            <li>4</li>
+            <li>5</li>
+            <li>6</li>
+            <li class="operador">*</li>
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+            <li class="operador">-</li>
+            <li>0</li>
+            <li>.</li>
+            <li class="operador">+</li>
+            <li>c</li>
+            <li class="operador">=</li>
+            
 
-</ul>
-</selection>
+        </ul>
+    </section>
 
-        </body>
+
+
+
+
+
+
+
+  
+
     </body>
     <script src="js/js.js"></script>
-
-<html>
+</html>
